# lem_in

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  alg_bfs.c  author  binary_search.c  check_bfr_alg.c  files.txt  ft_exit.c  ft_upload.c  getters.c  header.h  lem-in  lem_alg.c  main.c  map_1400_10_10_35_35_3_no_z  map_4000  map_examp  set_levels.c  sort_char.c  tab_comp.c  valid.c  visu
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
libft/: Makefile
libft/src/: ft_count_words.c  ft_strlcat.c  get_next_line.c  libft.h
maps/: map_1400  map_4000  map_4001
